Improve test performance in CI and build config
- Enable parallel execution for unit tests in migrator project
- Decouple unit tests from assembly JAR build in CI
- Start Docker services earlier in integration test job so they warm up during setup
- Disable JVM forking for unit tests to avoid unnecessary JVM startup overhead
- Cache SBT target directories in CI for faster incremental builds
- Remove dead JVM flags (-XX:MaxPermSize, -XX:+CMSClassUnloadingEnabled)